# jaycast

./: .gitignore  CODEMAP.md  Cargo.toml  README.md  Trunk.toml  XWEATHER.md  index.html  rain.json  robots.txt  sitemap.xml
assets/: style.css
src/: app.rs  lib.rs  rain_feed.rs  theme.rs  trails.rs
src/score/: heuristic.rs  mod.rs  params.rs
src/weather/: mod.rs  types.rs
src/xweather/: mod.rs  rescan.rs
tests/fixtures/: closures.txt  markham-2mo.json  qw.txt
