[package]
name = "jaycast"
version = "0.2.0"
edition = "2021"
autobins = false
license = "GPL-3.0-or-later"
description = "Weather-informed rideability forecasts for South Florida MTB trails"
repository = "https://github.com/j33433/jaycast"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std", "wasmbind"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Storage", "History", "Location", "MediaQueryList", "Document", "Element"] }
console_error_panic_hook = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "2.12", features = ["json"] }

[features]
cli = []

[[bin]]
name = "jaycast"
path = "src/bin/jaycast.rs"
required-features = ["cli"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
